--- a/blog/templates/blog/create.html
+++ b/blog/templates/blog/create.html
@@ -1,5 +1,6 @@
 <!-- ▼▼▼ git commit ”ログインユーザー改修”　テンプレートの拡張機能を搭載しました　▼▼▼-->
 <!--1.　まずは親テンプレートを指定します。-->
+{% load static %}
 {% extends 'blog/base.html' %}
 <!--2. 次に親テンプレートに組み込むブロックを記述します-->
     {%  block loginForm %}
