--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,21 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <title>index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'css/index.css' %}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<section>
     <h1>好きなことをつぶやこう！</h1>
     <i class="fas fa-dove"></i>
+
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">つぶやく</button>
     </form>
-    <p>タイムライン</p>
-    <p><a href="{% url 'blog:page_under_construction' %}">マイページ</a></p>
+    <div class="tubu">
+    <p>つぶやき一覧</p>
     <!--        以下、postsがデータを所持しているかどうかを判定して、条件分岐をさせています。-->
-
         {% for post in posts %}
         <div style="border: 1px solid;">
             <div>
@@ -32,6 +35,11 @@
                 </form>
         </div>
         {% endfor %}
-
+    </div>
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+        <div class="wave wave4"></div>
+    </section>
     <a href="{% url 'blog:top_page' %}">ログアウト</a>
 </body>
