--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -1,15 +1,27 @@
 <!-- ▼▼▼ git commit ”ログインユーザー改修”　テンプレートの拡張機能を搭載しました　▼▼▼-->
 <!--1.　まずは親テンプレートを指定します。-->
-{% extends 'blog/base.html' %}
+
+{% load static %}
+<link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
 <!--2. 次に親テンプレートに組み込むブロックを記述します-->
 <!--拡張元のbase.htmlとブロック名が異なるので真っ白の画面になってしました。こちらを対応-->
     {%  block loginForm %}
+    <section>
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+        <div class="wave wave4"></div>
+    </section>
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <a href="blog:index"><button type="submit">ログイン</button></a>
+        <div class="login">
+            <a href="blog:index"><button type="submit">ログイン</button></a>
+        </div>
     </form>
 <!--    git commit ”ログインユーザー改修”　ユーザーを作成する画面はDjangoでは別途作成する必要があるのでformタグの外に置きました-->
-    <a href="{% url 'blog:create' %}"><button type="button" class="btn btn-outline-info">ユーザー作成</button></a>
-    {% endblock %}
+    <div class="user">
+        <a href="{% url 'blog:create' %}"><button type="button" class="btn-outline-info">それとも新しくユーザーになる？</button></a>
+    </div>
+        {% endblock %}
 <!-- ▲▲▲ git commit ”ログインユーザー改修”　テンプレートの拡張機能を搭載しました　▲▲▲-->
