--- a/つぶやき君/blog/templates/blog/base.html
+++ b/つぶやき君/blog/templates/blog/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap&subset=cyrillic,japanese" rel="stylesheet">
     <link href="base.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
     <title>LOGIN</title>
