--- a/つぶやき君/blog/templates/blog/login.html
+++ b/つぶやき君/blog/templates/blog/login.html
@@ -3,6 +3,7 @@
 
 {% load static %}
 <link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap&subset=cyrillic,japanese" rel="stylesheet">
 <!--2. 次に親テンプレートに組み込むブロックを記述します-->
 <!--拡張元のbase.htmlとブロック名が異なるので真っ白の画面になってしました。こちらを対応-->
     {%  block loginForm %}
