--- a/つぶやき君/blog/static/css/base.css
+++ b/つぶやき君/blog/static/css/base.css
@@ -1,11 +1,20 @@
 *
 {
+font-family: 'Kosugi Maru', sans-serif;
     margin: 0;
     padding: 0;
+    color: white;
 }
+
+a
+{
+font-family: 'Kosugi Maru', sans-serif;
+}
+
 h1
 {
-   position: absolute;
+
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 90;
@@ -15,8 +24,12 @@ h1
   height: 3.2rem;
   text-align: center;
   font-size:40;
+  font-family:'Kosugi+Maru', sans-serif;
+  color: white;
 }
+
 p{
+font-family: 'Kosugi Maru', sans-serif;
  position: absolute;
   top: 60;
   right: 0;
@@ -30,6 +43,7 @@ p{
 }
 section
 {
+font-family:'Kosugi Maru', sans-serif;
 position: relative;
 width: 100%;
 height: 100vh;
