--- a/つぶやき君/blog/static/css/index1.css
+++ b/つぶやき君/blog/static/css/index1.css
@@ -2,23 +2,60 @@
 {
     margin: 0;
     padding: 0;
+    font-family: 'Kosugi Maru', sans-serif;
+    color: white;
+}
+.post2
+{
+padding-top:10;
+}
+.post
+{
+margin:auto;
+width:900;
+text-align:start;
+}
+.post-form
+{
+padding:10;
+}
+.tubuyaki
+{
+padding:10;
 }
 h1{
 position: fixed; /* 固定 */
    /* 一番上に表示 */
   width: 100%; /* 中央に表示 */
+  font-family:'Kosugi+Maru', sans-serif;
+  color: white;
 }
 .tubu
 {
 z-index:2;
+font-family:'Kosugi+Maru', sans-serif;
+  color: white;
 }
 
 footer{
   position: fixed; /* 固定 */
   bottom: 0;/* 一番下に表示 */
   width: 100%; /* 中央に表示 */
+  font-family:'Kosugi+Maru', sans-serif;
+  color: white;
 }
+.header
+{
 
+padding:30;
+font-size:50;
+}
+.logout
+{
+padding:10;
+font-size:15;
+float:right;
+}
 .post_form{
   top: 60;
   right: 0;
@@ -28,6 +65,8 @@ footer{
   width: 80%;
   height: 3.2rem;
   font-size:25;
+  font-family:'Kosugi+Maru', sans-serif;
+  color: white;
 }
 section
 {
@@ -35,6 +74,7 @@ width: 100%;
 height: 100vh;
 background: #3586ff;
 padding-bottom:100;
+text-align: center;
 }
 
 .wave
