--- a/つぶやき君/blog/templates/blog/create.html
+++ b/つぶやき君/blog/templates/blog/create.html
@@ -3,6 +3,7 @@
 
 
 {% load static %}
+<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap&subset=cyrillic,japanese" rel="stylesheet">
 <link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css">
 <!--2. 次に親テンプレートに組み込むブロックを記述します-->
     {%  block loginForm %}
@@ -18,6 +19,9 @@
         {{ form.as_p }}
         <button type="submit">作成</button>
     </form>
+
     <a href="{% url 'blog:login' %}"><button type="button" class="btn btn-outline-info">ログイン画面へ</button></a>
+
     {% endblock %}
+
 <!-- ▲▲▲ git commit ”ログインユーザー改修”　テンプレートの拡張機能を搭載しました　▲▲▲-->
