--- a/つぶやき君/blog/templates/blog/top_page.html
+++ b/つぶやき君/blog/templates/blog/top_page.html
@@ -1,14 +1,17 @@
 {% load static %}
 <html lang="ja">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap&subset=japanese" rel="stylesheet" type="text/css">
     <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>top_page</title>
 </head>
   <body>
    <section>
-       <h1><a href="/">つぶやき君にようこそ！</a></h1>
-       <p><a href="{% url 'blog:login'  %}">ログインする</a></p>
+       <h1><a class="tubu" href="/">つぶやき君にようこそ！</a></h1>
+            <div id="logu">
+                <p><a href="{% url 'blog:login'  %}">ログインする</a></p>
+            </div>
         <div class="wave wave1"></div>
         <div class="wave wave2"></div>
         <div class="wave wave3"></div>
