--- a/つぶやき君/blog/static/css/index1.css
+++ b/つぶやき君/blog/static/css/index1.css
@@ -1,9 +1,8 @@
 *
 {
     margin: 0;
-    padding: 0;
     font-family: 'Kosugi Maru', sans-serif;
-    color: white;
+
 }
 .post2
 {
@@ -22,6 +21,7 @@ padding:10;
 .tubuyaki
 {
 padding:10;
+padding-bottom:20;
 }
 h1{
 position: fixed; /* 固定 */
@@ -44,18 +44,26 @@ footer{
   font-family:'Kosugi+Maru', sans-serif;
   color: white;
 }
+.border
+{
+padding:5;
+}
 .header
 {
 
 padding:30;
 font-size:50;
+color:white;
 }
+
 .logout
 {
+color:white;
 padding:10;
 font-size:15;
 float:right;
 }
+
 .post_form{
   top: 60;
   right: 0;
@@ -71,12 +79,25 @@ float:right;
 section
 {
 width: 100%;
-height: 100vh;
+
 background: #3586ff;
-padding-bottom:100;
+
 text-align: center;
 }
+label
+{
+color: #3586ff;
+}
+.save
+{
+padding
+}
 
+textarea
+{
+width:600;
+margin-right:45;
+}
 .wave
 {
 background: #3586ff;
