--- a/つぶやき君/blog/templates/blog/index.html
+++ b/つぶやき君/blog/templates/blog/index.html
@@ -26,7 +26,7 @@
     <p class="tubuyaki">つぶやき一覧</p>
      <div class="post">
         {% for post in posts %}
-        <div style="border: 2px solid;" class="border">
+        <div style="border-top: 2px solid;" class="border">
             <div>
                 <p>投稿日: {{ post.created_date }}</p>
                 <div class="post2">
