--- a/つぶやき君/blog/static/css/create.css
+++ b/つぶやき君/blog/static/css/create.css
@@ -16,31 +16,8 @@ form
    color:white;
   font-size:20;
 }
-.login{
- position: absolute;
-  top: 130;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 80%;
-  height: 3.2rem;
-  text-align: center;
-  font-size:10;
-}
 
-.user{
- position: absolute;
-  top: 100;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 80%;
-  height: 3.2rem;
-  text-align: center;
-  font-size:25;
-}
+
 
 section
 {
@@ -51,9 +28,9 @@ background: #3586ff;
 overflow: hidden;
 }
 
-section .wave
+.wave
 {
-position: absolute;
+background: #3586ff;
 bottom: 0;
 left: 0;
 width: 100%;
@@ -61,22 +38,46 @@ height: 100px;
 background: url(wave.png);
 background-size: 1000px 100px;
 }
-section .wave.wave1
+.wave.wave1
 {
+position: fixed;
 animation: animate 30s linear infinite;
 z-index: 1000;
 opacity: 1;
 animation-delay: 0s;
 bottom: 0;
 }
-section .wave.wave2
+
+.wave.wave2
 {
+position: fixed;
 animation: animate2 15s linear infinite;
 z-index: 999;
 opacity: 0.5;
 animation-delay: -5s;
 bottom: 10px;
 }
+
+.wave.wave3
+{
+position: fixed;
+animation: animate2 15s linear infinite;
+z-index: 999;
+opacity: 0.5;
+animation-delay: -5s;
+bottom: 10px;
+}
+
+ .wave.wave4
+{
+position: fixed;
+animation: animate2 15s linear infinite;
+z-index: 999;
+opacity: 0.5;
+animation-delay: -5s;
+bottom: 10px;
+}
+
 @keyframes animate
 {
     0%
@@ -88,7 +89,35 @@ bottom: 10px;
         background-position: 1000px;
     }
 }
+
 @keyframes animate2
+{
+    0%
+    {
+        background-position-x: 0;
+    }
+    100%
+    {
+        background-position: 1000px;
+    }
+}
+
+
+
+@keyframes animate3
+{
+    0%
+    {
+        background-position-x: 0;
+    }
+    100%
+    {
+        background-position: 1000px;
+    }
+}
+
+
+@keyframes animate4
 {
     0%
     {
